--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="separation"></div>
         <section class="first">
             <div>
-                <span>Enjoy on your TV</span>
+                <span>Enjoy on your TV at home</span>
                 <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
                     Blu-ray plrayers and more.</span>
             </div>
